# mva-DiME

./: .gitignore  README.md  download.sh  plan.md  pyproject.toml  test_fad_minimal.py
audio/: README.md  audio_classifier.py  audio_datasets.py  cnn14_perceptual.py  diffusers_wrapper.py  download_ast.py  evaluate_fad.py  evaluate_metrics.py  evaluate_metrics_v2.py  evaluate_similarity.py  finetune.sh  finetune_diffusion.py  latex_export.py  main_audio.py  spectrogram_utils.py  test_audio.sh  test_classifier.py  train_classifier.py  upload_hf.sh
audio/results/guitar_removal_hq/step_0/info/: 000000.json  000001.json  000002.json  000003.json  000004.json  000005.json  000006.json  000007.json  000008.json  000009.json
audio/results/guitar_removal_hq/step_1/info/: 000000.json  000001.json  000002.json  000003.json  000004.json  000005.json  000006.json  000007.json
audio/results/guitar_removal_hq/step_2/info/: 000000.json  000001.json  000002.json  000003.json  000004.json  000005.json  000006.json  000007.json
audio/results/guitar_removal_hq/step_3/info/: 000000.json  000001.json  000002.json  000003.json  000004.json  000005.json  000006.json  000007.json
audio/results/guitar_removal_hq/step_4/info/: 000000.json  000001.json  000002.json  000003.json  000004.json  000005.json  000006.json  000007.json
audio/results/guitar_removal_hq/step_5/info/: 000000.json  000001.json  000002.json  000003.json  000004.json  000005.json  000006.json  000007.json
core/: sample_utils.py
notebooks/: audio_results_analysis.ipynb  train_classifier.ipynb  view samples.ipynb
report/: references.bib  report_sassi_blin_cargnello_team_26.tex  theme.sty
report/figures/: eval_fad_original_wav__cf_wav.tex  eval_metrics_v2_guitar_removal_hq.tex  eval_similarity_original_wav__cf_wav.tex  experiments-setup.drawio  main_results.tex
scripts/: train_classifier.py  train_classifier_openmic.py
slurm/: fit.sh
src/dense_audio_classifier/data/: irmas.py  mel_irmas_datamodule.py  mel_openmic_datamodule.py
src/dense_audio_classifier/model/: dense_classifier.py
