[project]
name = "dime"
version = "0.1.0"
description = "DiME - Diffusion Models for Counterfactual Explanations (image + audio)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=1.9",
    "torchvision",
    "numpy",
    "matplotlib",
    "pyyaml",
    "pandas",
    "h5py",
    "scipy",
    "tqdm",
    "blobfile",
    "mpi4py",
    "Pillow",
    "librosa>=0.11.0",
    "huggingface-hub>=0.36.2",
    "transformers>=4.57.6",
    "diffusers>=0.33.0",
    "datasets==4.8.4",
    "lightning[pytorch-extra]>=2.6.0",
    "litdata>=0.2.58",
    "triton-windows>=3.4.0.post21 ; platform_system == 'Windows'",
    "impi-rt>=2021.17.2",
    "polars>=1.36.1",
    "torchcodec>=0.11.0",
    "wandb>=0.25.1",
]
authors = [
    { name = "Simon Sassi", email = "12765875+maxerbox@users.noreply.github.com" }
]

[project.urls]
Homepage = "https://github.com/aygoun/mva-DiME"
Source = "https://github.com/aygoun/mva-DiME"

[project.optional-dependencies]
audio = [
    "librosa",
    "soundfile",
    "torchaudio",
    "transformers",
    "huggingface_hub",
    "diffusers",
    "datasets",
    "scikit-learn",
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
    "ipywidgets>=8.1.8",
    "microsoft-python-type-stubs",
    "mypy>=1.19.1",
    "nb-clean>=4.0.1",
    "pandas-stubs>=2.2.2.240807",
    "pytest",
    "ruff",
    "tqdm-stubs>=0.2.1",
    "types-pyyaml>=6.0.12.20250915",
]

[tools.mypy]
mypy_path = './src'

[tool.uv]
package = true


[tool.uv.sources]
dense_audio_classifier = { path = "src", editable = true }
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git" }
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
